# exam-example

./: .dockerignore  .env  .gitignore  Dockerfile  compose.yaml  pyproject.toml  redis-variables.env  web-variables.env
exam_example/: exam-example.py
prometheus-vol/: prometheus.yml
